Add assignment specification PDF and correct README
README fixes: link the assignment spec, pin exact toolchain versions
(JDK 20, Scala 3.2.2, JavaFX SDK 20.0.1) with the library path the
IntelliJ project expects, replace the single-file scala run command
(which cannot build this multi-file project) with IntelliJ run
instructions including the required JavaFX VM options, clarify that
board size 3-21 is TUI-only (GUI is fixed 5x5), and add the missing
ControllerUtils and CommandLineOption entries to the structure tree.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>